--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="#lenguages" class="nav-link">Lenguages</a></li>
 
             </ul>
 
@@ -33,6 +33,22 @@
     </header>
     <main>
         <div class="container"></div>
+        <section class="section" id="profile"><h1 class="section-title">Efim Yushchanka</h1></section>
+        <section class="section" id="contacts"><h2 class="section-title">Contacts</h2></section>
+        <section class="section" id="summary"><h2 class="section-title">Summary</h2></section>
+        <section class="section" id="skills"><h2 class="section-title">Skills</h2></section>
+        <section class="section" id="code"><h2 class="section-title">Code</h2><p><code><pre>const car = {
+            brand: 'Ford',
+            model: 'Fiesta',
+              start: function() {
+          console.log('Started ${this.brand} ${this.model}')
+            }
+          }
+          </pre></code></p></section>
+        <section class="section" id="courses"><h2 class="section-title">Courses</h2></section>
+        <section class="section" id="projects"><h2 class="section-title">Projects</h2></section>
+        <section class="section" id="education"><h2 class="section-title">Education</h2></section>
+        <section class="section" id="languages"><h2 class="section-title">Languages</h2></section>
     </main>
     <footer>
         <div class="container"></div>
