--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <title>cv</title>
+    <title>CV</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/favicon.css">
+    <link rel="icon" href="./assets/img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container"></div>
         <nav class="nav">
             <ul class="nav-list">
@@ -25,17 +24,19 @@
                 <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                <li class="nav-item"><a href="#lenguages" class="nav-link">Lenguages</a></li>
+                <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
 
             </ul>
 
         </nav>
     </header>
-    <main>
+    <main class="main-container">
         <div class="container"></div>
-        <section class="section" id="profile"><h1 class="section-title">Efim Yushchanka</h1></section>
+        <section class="section section-profile" id="profile">
+        <img src="./assets/img/avatar.jpg" alt="foto" class="section-profile-logo">
+        <div class ="section-profile-title"><h1 class="section-title main-title">Efim Yushchanka</h1><h3 class="section-subtitle">Junior Front-End Developer</h3></div></section>
         <section class="section" id="contacts"><h2 class="section-title">Contacts</h2></section>
-        <section class="section" id="summary"><h2 class="section-title">Summary</h2></section>
+        <p class="section" id="summary"><h2 class="section-title">Summary</h2><p>I am 29 years old, I work as a network engineer. My goal is to gain knowledge in the field of front-end development.</p></section>
         <section class="section" id="skills"><h2 class="section-title">Skills</h2></section>
         <section class="section" id="code"><h2 class="section-title">Code</h2><p><code><pre>const car = {
             brand: 'Ford',
