fix: add new information in cv

--- a/index.html
+++ b/index.html
@@ -35,9 +35,30 @@
         <section class="section section-profile" id="profile">
         <img src="./assets/img/avatar.jpg" alt="foto" class="section-profile-logo">
         <div class ="section-profile-title"><h1 class="section-title main-title">Efim Yushchanka</h1><h3 class="section-subtitle">Junior Front-End Developer</h3></div></section>
-        <section class="section" id="contacts"><h2 class="section-title">Contacts</h2></section>
-        <p class="section" id="summary"><h2 class="section-title">Summary</h2><p>I am 29 years old, I work as a network engineer. My goal is to gain knowledge in the field of front-end development.</p></section>
-        <section class="section" id="skills"><h2 class="section-title">Skills</h2></section>
+        <section class="section" id="contacts"><h2 class="section-title">Contacts</h2>
+        <ul class="section-list">
+            <li class="section-item">Vitebsk, Belarus</li>
+            <li class="section-item">Email: 
+                <a href="mailto:cuper8555@gmail.com" title="email">cuper8555@gmail.com</a>
+            </li>
+            <li class="section-item">Github: <a href="https://github.com/Gurabas" title="github">Gurabas</a>
+            </li>
+        </ul></section>
+        <section class="section" id="summary"><h2 class="section-title">Summary</h2><p>I am 29 years old, I work as a network engineer. My goal is to gain knowledge in the field of front-end development.</p></section>
+        <section class="section" id="skills"><h2 class="section-title">Skills</h2><ul class="section-list">
+            <li class="section-item">
+                Html
+            </li>
+            <li class="section-item">
+                Css
+            </li>
+            <li class="section-item">
+                Java Script
+            </li>
+            <li class="section-item">
+                Git/Github
+            </li>
+        </ul></section>
         <section class="section" id="code"><h2 class="section-title">Code</h2><p><code><pre>const car = {
             brand: 'Ford',
             model: 'Fiesta',
