--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </li>
         </ul></section>
         <section class="section" id="summary"><h2 class="section-title">Summary</h2><p>I am 29 years old, I work as a network engineer. My goal is to gain knowledge in the field of front-end development.</p></section>
-        <section class="section" id="skills"><h2 class="section-title">Skills</h2><ul class="section-list">
+        <section class="section" id="skills"><h2 class="section-title">Skills</h2>
+            <ul class="section-list">
             <li class="section-item">
                 Html
             </li>
@@ -59,21 +60,46 @@
                 Git/Github
             </li>
         </ul></section>
-        <section class="section" id="code"><h2 class="section-title">Code</h2><p><code><pre>const car = {
+        <section class="section" id="code"><h2 class="section-title">Code</h2>
+            <pre><code>const car = {
             brand: 'Ford',
             model: 'Fiesta',
               start: function() {
           console.log('Started ${this.brand} ${this.model}')
             }
           }
-          </pre></code></p></section>
-        <section class="section" id="courses"><h2 class="section-title">Courses</h2></section>
-        <section class="section" id="projects"><h2 class="section-title">Projects</h2></section>
-        <section class="section" id="education"><h2 class="section-title">Education</h2></section>
-        <section class="section" id="languages"><h2 class="section-title">Languages</h2></section>
+        </code></pre></section>
+        <section class="section" id="courses"><h2 class="section-title">Courses</h2>
+        <ul class="section-list">
+            <li class="section-item">
+                Rsschool<span> - JS / FRONT-END. STAGE 0</span>
+            </li>
+        </ul></section>
+        <section class="section" id="projects">
+            <h2 class="section-title">Projects</h2>
+        <ul class="section-list">
+            <li class="section-item">Soon...</li>
+        </ul></section>
+        <section class="section" id="education">
+            <h2 class="section-title">Education</h2>
+        <p>Academy of communication</p>
+    </section>
+        <section class="section" id="languages">
+            <h2 class="section-title">Languages</h2>
+        <ul class="section-list">
+            <li class="section-item">
+                Russian - native 
+            </li>
+            <li class="section-item">
+                English - A2(B1 in progress)
+            </li>
+        </ul></section>
     </main>
-    <footer>
-        <div class="container"></div>
+    <footer class="footer">
+        <div class="container footer-container">
+            <div>2022 <a href="https://github.com/Gurabas" class="nav-link">Gurabas</a></div>
+            <a href="https://rs.school/js/" class="rss"></a>
+        </div>
     </footer>
     
 </body>
