docs: update my CV

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 Russian - native 
             </li>
             <li class="section-item">
-                English - A2(B1 in progress)
+                English - A2(B1 inn progress)
             </li>
         </ul></section>
     </main>
