--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li class="section-item">Github: <a href="https://github.com/Gurabas" title="github">Gurabas</a>
             </li>
         </ul></section>
-        <section class="section" id="summary"><h2 class="section-title">Summary</h2><p>I am 29 years old, I work as a network engineer. My goal is to gain knowledge in the field of front-end development.</p></section>
+        <section class="section" id="summary"><h2 class="section-title">Summary</h2><p>I am 30 years old, I work as a network engineer. My goal is to gain knowledge in the field of front-end development.</p></section>
         <section class="section" id="skills"><h2 class="section-title">Skills</h2>
             <ul class="section-list">
             <li class="section-item">
@@ -61,18 +61,22 @@
             </li>
         </ul></section>
         <section class="section" id="code"><h2 class="section-title">Code</h2>
-            <pre><code>const car = {
-            brand: 'Ford',
-            model: 'Fiesta',
-              start: function() {
-          console.log('Started ${this.brand} ${this.model}')
+            <pre><code>if(!isPlay) {
+                audio.play();
+                isPlay = true
+                play.classList.add('pause');
+                playListContainer.childNodes[playNum].classList.add('item-active');
+                document.querySelector('#track').textContent = playList[playNum].title;
             }
-          }
         </code></pre></section>
         <section class="section" id="courses"><h2 class="section-title">Courses</h2>
         <ul class="section-list">
             <li class="section-item">
-                Rsschool<span> - JS / FRONT-END. STAGE 0</span>
+                <ul class="section-list">
+                    <li class="section-item">Rsschool - JS / FRONT-END. STAGE 0</li>
+                    <li class="section-item">Rsschool - JS / FRONT-END. STAGE 1</li>
+                </ul>
+                
             </li>
         </ul></section>
         <section class="section" id="projects">
