fix: update spaces

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <li class="section-item">
                 Git/Github
             </li>
-        </ul></section>
+            </ul>
+        </section>
         <section class="section" id="code"><h2 class="section-title">Code</h2>
             <pre><code>if(!isPlay) {
                 audio.play();
@@ -88,7 +89,7 @@
             <h2 class="section-title">Languages</h2>
         <ul class="section-list">
             <li class="section-item">
-                Russian - native 
+                Russian - native
             </li>
             <li class="section-item">
                 English - A2(B1 in progress)
