--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container"></div>
+        <div class="container">
         <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
@@ -26,9 +26,10 @@
                 <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
             </ul>
         </nav>
+    </div>
     </header>
-    <main class="main-container">
-        <div class="container"></div>
+    <main class="container main-container">
+        <div class="container">
         <section class="section section-profile" id="profile">
         <img src="./assets/img/avatar.jpg" alt="foto" class="section-profile-logo">
         <div class ="section-profile-title"><h1 class="section-title main-title">Efim Yushchanka</h1><h3 class="section-subtitle">Junior Front-End Developer</h3></div></section>
@@ -59,14 +60,13 @@
             </ul>
         </section>
         <section class="section" id="code"><h2 class="section-title">Code</h2>
-            <pre><code>if(!isPlay) {
-                audio.play();
-                isPlay = true
-                play.classList.add('pause');
-                playListContainer.childNodes[playNum].classList.add('item-active');
-                document.querySelector('#track').textContent = playList[playNum].title;
-            }
-        </code></pre></section>
+            <pre>
+if(!isPlay) { audio.play();
+isPlay = true play.classList.add('pause'); 
+playListContainer.childNodes[playNum];
+document.querySelector('#track')}
+            </pre>  
+        </section>
         <section class="section" id="courses"><h2 class="section-title">Courses</h2>
         <ul class="section-list">
             <li class="section-item">
@@ -95,6 +95,7 @@
                 English - A2(B1 in progress)
             </li>
         </ul></section>
+    </div>
     </main>
     <footer class="footer">
         <div class="container footer-container">
